<resources>
    <string name="app_name">Access Management app</string>
    <string name="action_settings">Settings</string>
    <string name="entrance">入室状況</string>
    <string name="name">名前</string>
    <string name="entrytime">入室時刻</string>
    <string name="exittime">退出時刻</string>
    <string name="circle">◎</string>
    <string name="entrance1">入室</string>
    <string name="ishihara">石原好孝</string>
    <string name="time">10:00</string>
    <string name="time1">17:00</string>
    <string name="exit">退室</string>
    <string name="name2">上田将理</string>
    <string name="time2">13:00</string>
    <string name="time3">20:00</string>
    <string name="中村淳行" />
    <string name="nakamura">中村淳行</string>
    <string name="time4">0:00</string>
    <string name="time5">24:00</string>
    <string name="name5" />
    <string name="川崎">川崎雄太</string>
    <string name="time9">9:00</string>
    <string name="time16">16:00</string>
    <string name="sumiya">角谷聖哉</string>
    <string name="touroku">登録画面</string>
    <string name="name_touroku">名前：</string>
    <string name="finger">指紋ID：</string>
    <string name="save">保存</string>
</resources>
